content plus new scrollbar bugfix

--- a/src/stylesheets/nested/content-plus.scss
+++ b/src/stylesheets/nested/content-plus.scss
@@ -26,6 +26,7 @@
     position: relative;
     justify-content: space-between;
     border-radius: 3px;
+    height: auto!important;
     //height: 100%;
     .recent-item:last-of-type {
       .activity-item .body {
